# api-tree-test

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
src/core/: config.py  utils.py
src/service/: endpoints.py
